Cleaned up UI to work with multiple domains

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -37,7 +37,7 @@
 
 
 	<div id="sliteWatermak" style="height:40px; line-height:40px;">
-        <span style="vertical-align:top;">Powered by SLITE.US</span>
+        <span style="vertical-align:top;" id='menuTitle'>www.slite.us</span>
         <span style="font-size:2em; vertical-align:top;">☰</span>
     </div>
 
