--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title><%= user.username %> - online presentations</title>
+    <title>Slite - online presentations</title>
     <meta name="title" content="SLITE - online presentations" />
     <meta name="description" content="Live online powerpoint slides presentation for web" />
     <meta content="http://slite.us" property="og:url" />
@@ -72,17 +72,17 @@
     <!-- End Google Tag Manager -->
     <!-- Header -->
     <header id="header">
-        <!--<h1>
+        <h1>
             <a href="index.html" id="logo">
                 <img src="img/logo.png" id="headerLogo" />
             </a>
-        </h1>-->
+        </h1>
         <nav id="nav">
             <ul id="navigation" class="clearfix">
-                <!--<li><a href="#one" data-index="one" class="menuLink">Product</a></li>
+                <li><a href="#one" data-index="one" class="menuLink">Product</a></li>
                 <li><a href="#two" data-index="two" class="menuLink">How it works</a></li>
                 <li><a href="#three" data-index="three" class="menuLink">Company</a></li>
-                <li><a href="#four" data-index="four" class="menuLink">Contact</a></li>-->
+                <li><a href="#four" data-index="four" class="menuLink">Contact</a></li>
                     <% if (!user) { %>
                     	<li><a href="signin.html" data-index="three" class="glyphicon glyphicon-user">Sign in</a></li>
 			<li><a href="signup.html" data-index="four" class="glyphicon glyphicon-user">Sign up</a></li>
