Revert ab1f871..5ebdc90
This rolls back to commit ab1f8716eee3755f94d9a7b27792c8169dba2bf4.

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -37,7 +37,7 @@
 
 
 	<div id="sliteWatermak" style="height:40px; line-height:40px;">
-        <span style="vertical-align:top;" id='menuTitle'>www.slite.us</span>
+        <span style="vertical-align:top;">Powered by SLITE.US</span>
         <span style="font-size:2em; vertical-align:top;">☰</span>
     </div>
 
@@ -123,7 +123,6 @@
 			<li><a href="#"></a>
 				<ul class="menuSubmenu">
 				  <li><a href="javascript:showRemote()" id="menuRemote">Become Presenter</a></li>
-                  <li><a href="javascript:downloadPresentation()" id="downloadPresentation">Download Presentation</a></li>
 				  <li><a href="javascript:shareFacebook()" id="shareFacebook">Share on Facebook</a></li>
 				  <li><a href="javascript:shareTwitter()" id="shareTwitter">Share on Twitter</a></li>
 				  <li><a href="javascript:showHidePersonalNotes()" id="menuPersonalNotes"><span id='personalNotesOpenCloseLabel'></span> Personal Notes</a></li>
