Small UI imrovements

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -79,10 +79,10 @@
         </h1>-->
         <nav id="nav">
             <ul id="navigation" class="clearfix">
-                <!--<li><a href="#one" data-index="one" class="menuLink">Product</a></li>
+                <li><a href="#one" data-index="one" class="menuLink">Product</a></li>
                 <li><a href="#two" data-index="two" class="menuLink">How it works</a></li>
                 <li><a href="#three" data-index="three" class="menuLink">Company</a></li>
-                <li><a href="#four" data-index="four" class="menuLink">Contact</a></li>-->
+                <li><a href="#four" data-index="four" class="menuLink">Contact</a></li>
                     <% if (!user) { %>
                     	<li><a href="signin.html" data-index="three" class="glyphicon glyphicon-user">Sign in</a></li>
 			<li><a href="signup.html" data-index="four" class="glyphicon glyphicon-user">Sign up</a></li>
