Added curtains to main page

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
 
-    <!-- Google Tag Manager -->
+<!-- Google Tag Manager -->
     <noscript>
         <iframe src="//www.googletagmanager.com/ns.html?id=GTM-NRK9KQ"
                 height="0" width="0" style="display:none;visibility:hidden"></iframe>
@@ -69,7 +69,8 @@
             f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-NRK9KQ');
     </script>
-    <!-- End Google Tag Manager -->
+<!-- End Google Tag Manager -->
+	
     <!-- Header -->
     <header id="header">
         <!--<h1>
@@ -93,12 +94,16 @@
             </ul>
         </nav>
     </header>
-    
+	    
     <section id="banner">
         <div class="uploadfile">
             <button type="button" class="uploadButton">Upload Presentation</button>
             <input type="file" accept="pptx" id="uploadPresentation">
         </div>
+		
+		
+	<img src="./img/RightCurtain.gif" id="rightCurtain" class="curtain" />
+	<img src="./img/RightCurtain.gif" id="leftCurtain" class="curtain leftCurtain" />
  
         <!--<div id="bgvid">
             <video autoplay poster="img/Slite_Background.jpg" style="width:100%"><source src="media/Slite_Background.mp4" type="video/mp4"></video><br />
