--- a/AWS_Website/www_static/remote/index_poll.html
+++ b/AWS_Website/www_static/remote/index_poll.html
@@ -1,11 +1,11 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 	<head>
     <meta charset="utf-8" content="user-scalable=no">
     <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=1.0, user-scalable=no" />
     <title>SENDER</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <script src="./js/jquery-2.0.3.min.js"></script>
+    <script src="./js/jquery-2.1.3.min.js"></script>
     <script src="./js/speechRecognizer.js"></script>
     <script src="./js/volumeButtonControl.js"></script>
     <script src="./js/shake.js"></script>
