--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -33,8 +33,8 @@
 
 <body> <!--onresize="resizeCanvas()">-->
 
-	<img src="../img/RightCurtain.gif" id="rightCurtain" class="curtain" />
-	<img src="../img/RightCurtain.gif" id="leftCurtain" class="curtain leftCurtain" />
+	<img src="../img/RightCurtain.png" id="rightCurtain" class="curtain" />
+	<img src="../img/RightCurtain.png" id="leftCurtain" class="curtain leftCurtain" />
 	
 	<canvas id="drawCanvas" ></canvas>
 
