--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -102,8 +102,8 @@
         </div>
 		
 		
-	<img src="./img/RightCurtain.gif" id="rightCurtain" class="curtain" />
-	<img src="./img/RightCurtain.gif" id="leftCurtain" class="curtain leftCurtain" />
+	<img src="./img/RightCurtain.png" id="rightCurtain" class="curtain" />
+	<img src="./img/RightCurtain.png" id="leftCurtain" class="curtain leftCurtain" />
  
         <!--<div id="bgvid">
             <video autoplay poster="img/Slite_Background.jpg" style="width:100%"><source src="media/Slite_Background.mp4" type="video/mp4"></video><br />
