Added missing menu items back (home, download)

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -131,8 +131,9 @@
 				  <li><a href="javascript:showHidePersonalNotes()" id="menuPersonalNotes"><span id='personalNotesOpenCloseLabel'></span> Personal Notes</a></li>
                   <li><a href="javascript:shareFacebook()" id="shareFacebook">Share on Facebook</a></li>
 				  <li><a href="javascript:shareTwitter()" id="shareTwitter">Share on Twitter</a></li>
-				  <!--<li><a href="javascript:showHideInsertVideoSlideOverlay()" id="menuInsertVideoSlide">Insert Video Slide</a></li>
-				  <li><a href="http://www.slite.us">Home</a></li>-->
+				  <li><a href="javascript:downloadPresentation()" id="downloadPresentation">Download Presentation</a></li>
+				  <!--<li><a href="javascript:showHideInsertVideoSlideOverlay()" id="menuInsertVideoSlide">Insert Video Slide</a></li>-->
+				  <li><a href="http://www.slite.us">Home</a></li>
 				  <li><a href="javascript:openContactUs()" id="menuContactUs">Contact Us / Suggest / Ask</a></li>
 				  <li><a href="javascript:showHideHelpOverlay()" id="menuHelpOverlay">Help</a></li>
 				</ul>
