--- a/AWS_Website/www_static/my.html
+++ b/AWS_Website/www_static/my.html
@@ -27,7 +27,7 @@
 					<% slides.forEach(function(slide){ %>
 						<tr>
 						<td width="200"><a href="/<%= slide.sid %>"><img src="/<%= slide.sid %>/img0.jpg" width="50%"></a></td>
-						<td><a href="/<%= slide.sid %>"><%= slide.title %></a><br>Upploaded: <%= moment(slide.created).format('MMMM DD, YYYY hh.mm A') %></td>
+						<td><a href="/<%= slide.sid %>"><%= slide.title %></a><br>Uploaded: <%= moment(slide.created).format('MMMM DD, YYYY hh.mm A') %><br>Size: <%= (slide.size/1024/1024).toFixed(2)   %> Mb</td>
 						</tr>
 					<%  }); %>
 					</table>
