--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-	<title>TITLE</title>
+	<title><%= title %></title>
 
 	<!-- Video Chat files -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -124,8 +124,10 @@
 	<nav id="primary_nav_wrap">
 		<ul>
 			<li><a href="#"></a>
-				<ul class="menuSubmenu">		  
-				  <li><a href="javascript:showRemote()" id="menuRemote">Become Presenter</a></li>
+				<ul class="menuSubmenu">
+				   <% if (presenter == 1) { %>
+						<li><a href="javascript:showRemote()" id="menuRemote">Become Presenter</a></li>
+					<% } %>	
 				  <li><a href="javascript:showHideComments()" id="menuOpenWallChat"><span id='chatOpenCloseLabel'></span>Text Chat</a></li>
 				  <li><a href="javascript:showHideVideoChat()" id="menuOpenVideoChat"><span id='videoChatOpenCloseLabel'></span> Video Chat</a></li>
 				  <li><a href="javascript:showHidePersonalNotes()" id="menuPersonalNotes"><span id='personalNotesOpenCloseLabel'></span> Personal Notes</a></li>
