--- a/AWS_Website/www_static/my.html
+++ b/AWS_Website/www_static/my.html
@@ -9,7 +9,28 @@
         <title>Slite - web presentation software</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+		<!--<script src="js/jquery-2.1.3.min.js"></script>
+		<script src="/socket.io/socket.io.js"></script>
+        <script>window.jQuery || document.write('<script src="js/jquery-2.1.1.min.js"><\/script>')</script>
+        <script src="js/bootstrap.js"></script>
+        <script src="js/main.js"></script>-->
+		
+    <script src="js/jquery-2.1.3.min.js"></script>
+    <script src="js/jquery.scrolly.min.js"></script>
+    <script src="js/jquery.dropotron.min.js"></script>
+    <script src="js/jquery.scrollex.min.js"></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/skel-layers.min.js"></script>
+    <script src="js/init.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/client.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/jquery.scrollTo.js"></script>
 
+		
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 
@@ -20,22 +41,18 @@
     <body style='background-image: url(img/Slite_Background.jpg);'>
         <section class="middle">
             <div class="container-fluid">
-
-                <form class="m-form-signin" role="form" action="/signin.html" method="post">
                     <h1>My uploads</h1>
 					<table width="500" border="0">
 					<% slides.forEach(function(slide){ %>
-						<tr>
+						<tr id="slide_<%= slide.sid %>">
 						<td width="200"><a href="/<%= slide.sid %>"><img src="/<%= slide.sid %>/img0.jpg" width="50%"></a></td>
-						<td><a href="/<%= slide.sid %>"><%= slide.title %></a><br>Uploaded: <%= moment(slide.created).format('MMMM DD, YYYY hh.mm A') %><br>Size: <%= (slide.size/1024/1024).toFixed(2)   %> Mb</td>
+						<td><a href="/<%= slide.sid %>"><%= slide.title %></a><br>Uploaded: <%= moment(slide.created).format('MMMM DD, YYYY hh.mm A') %><br>Size: <%= (slide.size/1024/1024).toFixed(2)   %> Mb<br><a href="#" slideId="<%= slide.sid %>" class="deleteSlide">Delete slide</a></td>
 						</tr>
 					<%  }); %>
 					</table>
-                </form>
-
             </div>
         </section>
-		
+				<input type="file" accept="pptx" id="uploadPresentation" style="display: none">		
 		<div class="back" href="http://www.slite.us">
 
         <nav class="navbar navbar-default m-navbar" role="navigation">
@@ -93,11 +110,5 @@
                   </div><!-- /.container-fluid -->
           </nav>
     </div>
-
-        
-		<script src="js/jquery-2.1.1.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/jquery-2.1.1.min.js"><\/script>')</script>
-        <script src="js/bootstrap.js"></script>
-        <script src="js/main.js"></script>
     </body>
 </html>
