--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -133,6 +133,7 @@
 				  <li><a href="javascript:shareTwitter()" id="shareTwitter">Share on Twitter</a></li>
 				  <li><a href="javascript:downloadPresentation()" id="downloadPresentation">Download Presentation</a></li>
 				  <!--<li><a href="javascript:showHideInsertVideoSlideOverlay()" id="menuInsertVideoSlide">Insert Video Slide</a></li>-->
+				  <li><a href="../my.html" id="shareTwitter">My Presentations</a></li>
 				  <li><a href="http://www.slite.us">Home</a></li>
 				  <li><a href="javascript:openContactUs()" id="menuContactUs">Contact Us / Suggest / Ask</a></li>
 				  <li><a href="javascript:showHideHelpOverlay()" id="menuHelpOverlay">Help</a></li>
