--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -47,7 +47,7 @@
 
     <div id="redDot"><img src="../img/redDot.png" alt="Laser Pointer"></div>
 
-  	<div id="video-gallery" class="royalSlider videoGallery rsDefault"></div>
+  	<center><div id="video-gallery" class="royalSlider videoGallery rsDefault"></div></center>
 
 	<div id="personalNotes">
 		<div class="closevideo" id="closePersonalNotes"></div>
