--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-	<title><%= title %></title>
+	<title>Presentation</title>
 
 	<!-- Video Chat files -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -18,7 +18,7 @@
       myRedraw="both";
     </script>-->
 
-	<script>var presenter = <%= presenter %>;</script>
+	<script>var presenter = "<%= presenter %>"; var title = "<%= title %>"</script>
     <link rel="stylesheet" href="../css/videochat/videochat-style.css">
     <link rel="stylesheet" href="../css/jquery-ui.min.css">
     <link class="rs-file" href="../css/royalslider.css" rel="stylesheet">
