Fixed CSS in slide display

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -33,14 +33,14 @@
 
 <body> <!--onresize="resizeCanvas()">-->
 
-	<img src="../img/RightCurtain.png" id="rightCurtain" class="curtain" />
-	<img src="../img/RightCurtain.png" id="leftCurtain" class="curtain leftCurtain" />
+	<!--<img src="../img/RightCurtain.png" id="rightCurtain" class="curtain" />
+	<img src="../img/RightCurtain.png" id="leftCurtain" class="curtain leftCurtain" />-->
 	
 	<canvas id="drawCanvas" ></canvas>
 
 
 	<div id="sliteWatermak" style="height:40px; line-height:40px;">
-        <span style="vertical-align:top;" id='menuTitle'>www.slite.us</span>
+        <span style="vertical-align:top;" id='menuTitle'></span>
         <span style="font-size:2em; vertical-align:top;" alt="Website Menu">☰</span>
     </div>
 
