Fixed Videochat css

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -92,7 +92,7 @@
 	<div id="personalNotesPanel"></div>
 
 	<div id="videochatpanel"></div>
-	<div id="videochat" style="overflow-x: hidden; overflow-y: scroll;">
+	<div id="videochat">
 		<h1>Video Chat <div class="closevideo" id="closevideo"></div></h1>
 		<div id="clickallow" style='font-size:24px;padding-top:0px;'>click "Allow" above<b style='font-size:38'> &#8599;</b></div>
 		<article id="videochatMainContainer">
