Starting to fix chat css

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -1,7 +1,8 @@
 ﻿<html>
 <head>
 	<title>Presentation</title>
-
+    <link rel="shortcut icon" id="favicon" href="../img/favicon.png">
+	
 	<!-- Video Chat files -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
@@ -93,7 +94,7 @@
 
 	<div id="videochatpanel"></div>
 	<div id="videochat">
-		<h1>Video Chat <div class="closevideo" id="closevideo"></div></h1>
+		<h1><div class="closevideo" id="closevideo"></div></h1>
 		<div id="clickallow" style='font-size:24px;padding-top:0px;'>click "Allow" above<b style='font-size:38'> &#8599;</b></div>
 		<article id="videochatMainContainer">
 			<!-- just copy this <section> and next script -->
