--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -104,7 +104,7 @@
         </div>
 	<% } else { %>
 		<div class="uploadfile">
-            <button type="button" class="uploadButton" onclick="javascript:document.location='my.html'">You have reached the upload limit</button>
+            <button type="button" class="uploadButton" onclick="javascript:document.location='my.html'">Limit reached.<br/>Click here to delete.</button>
 			<input type="file" accept="pptx" id="uploadPresentation" style="display: none">		
         </div>
 	<% } %>
