CSS for text chat and video chat for open/close

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -58,7 +58,7 @@
 	</div>
 
 	<div id="comments">
-			<center><div class='panelTitle' style='position: absolute; left: 25%;'>Chat with others about this presentation</div><center>
+			<center><div class='panelTitle' style='position: absolute; left: 3%;'>Live Chat about this presentation</div><center>
 			<div class="closevideo" id="closeChat" style='margin-right: 20px;'></div>
 			<iframe id="urlChat" src="../chat.html" style='width:100%;height:100%'></iframe>
 			<script>
