Added Google Tracking to A1 index.html

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -36,6 +36,28 @@
 
 	<!--<img src="../img/RightCurtain.png" id="rightCurtain" class="curtain" />
 	<img src="../img/RightCurtain.png" id="leftCurtain" class="curtain leftCurtain" />-->
+ <!-- Google Tag Manager -->
+    <noscript>
+        <iframe src="//www.googletagmanager.com/ns.html?id=GTM-NRK9KQ"
+            height="0" width="0" style="display:none;visibility:hidden">
+        </iframe>
+    </noscript>
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f  = d.getElementsByTagName(s)[0]
+              , j  = d.createElement(s)
+              , dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src = '//www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NRK9KQ');
+    </script>
+    <!-- End Google Tag Manager --><br>
+
 	
 	<canvas id="drawCanvas" ></canvas>
 
@@ -178,5 +200,14 @@
     <script src="../A1/js/A1.js"></script>
     <script src="../A1/js/notes.js"></script>
     <!-- end VideoChat Javascript -->
+
+    <script>
+	    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	    ga('create', 'UA-61563357-1', 'auto');
+	    ga('send', 'pageview');
+    </script>
 </body>
 </html>
