--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -137,7 +137,7 @@
 			</section>
 		</article>
 	</div>
-
+	
 	<div class="startTemporaryPopup" id="videoChatExplanator">&#8592; click grey bar to open Video Chat</div>
 	<div class="startTemporaryPopup" id="wallChatExplanator">click grey bar to open Wall/Chat &#8594;</div>
 	<div class="startTemporaryPopup" id="urlExplanator">share this is unique address of your presentation &#8593;</div>
@@ -148,7 +148,7 @@
 		<ul>
 			<li><a href="#"></a>
 				<ul class="menuSubmenu">
-				  <li><a href="javascript:showRemote()" id="menuRemote" style="display: none">Become Presenter</a></li>
+				  <li><a href="javascript:showRemote()" id="menuRemote" style="display: none">Remote Control (live)</a></li>
 				  <li><a href="javascript:showHideComments()" id="menuOpenWallChat"><span id='chatOpenCloseLabel'></span>Text Chat</a></li>
 				  <li><a href="javascript:showHideVideoChat()" id="menuOpenVideoChat"><span id='videoChatOpenCloseLabel'></span> Video Chat</a></li>
 				  <li><a href="javascript:showHidePersonalNotes()" id="menuPersonalNotes"><span id='personalNotesOpenCloseLabel'></span> Personal Notes</a></li>
@@ -165,6 +165,9 @@
 		</ul>
 	</nav>
 
+	<div class="navButton navButtonPrev" id="navPrev">&#x2039;</div>
+	<div class="navButton navButtonNext" id="navNext">&#x203a;</div>
+	
     <script src="../js/jquery-2.1.3.min.js"></script>
     <script src="../js/jquery-ui.min.js"></script>
     <script class="rs-file" src="../js/jquery.royalslider.min.js"></script>
