--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -64,7 +64,7 @@
 
 	<div id="sliteWatermak" style="height:40px; line-height:40px;">
         <span style="vertical-align:top;" id='menuTitle'></span>
-        <span style="font-size:2em; vertical-align:top;" alt="Website Menu">☰</span>
+        <span style="vertical-align:top;" alt="Website Menu">☰</span>
     </div>
 
 
