--- a/AWS_Website/www_static/remote/index.html
+++ b/AWS_Website/www_static/remote/index.html
@@ -65,13 +65,27 @@
     </div>
     <!--<div class="UI botRow roundButton" id="speech">VOICE<br>CONTROL</div>
     </div>-->
-    <script>
+    <!--<script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-61563357-1', 'auto');
         ga('send', 'pageview');
-    </script>
+    </script>-->
+		<script type="text/javascript">
+		try{
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-61563357-1']);
+			_gaq.push(['_setDomainName', window.location.hostname.substring(4)]);
+			_gaq.push(['_setAllowLinker', true]);
+			_gaq.push(['_trackPageview']);
+			(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		}catch(e) {}
+	</script>
 </body>
 </html>
