Styling of web remote control (removed top)

--- a/AWS_Website/www_static/remote/index.html
+++ b/AWS_Website/www_static/remote/index.html
@@ -41,16 +41,12 @@
         })(window, document, 'script', 'dataLayer', 'GTM-NRK9KQ');
     </script>
     <!-- End Google Tag Manager --><br>
-    <div class="UI topRow midCol" id="URLBox">
-		www.slite.us/<input type="text" id="URLSlides" value="Enter code here" style="color:grey; border:0px" onclick="clearURLSlides()">
-	<span class="UI" id="timeDisplay">start &#8986;</span><br>
-	</div>
     
     <div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)">
     <div id="overlay"></div>
     <iframe id="theIframe" class="frame" seamless></iframe>
 	</div>
-	<div class="UI botRow" id="otherSlides">
+	<div class="UI botRow" id="navButtons">
 		<div class="UI button button_unpressed" id="prev" style="height:50px; line-height:50px;">
 			<span style="font-size:2em; vertical-align:top; float:left; padding-right:10px; padding-left:30px;">&lt;</span>
 			<span style="vertical-align:top;float:left;">PREV</span>
@@ -61,6 +57,11 @@
 			<span style="font-size:2em; vertical-align:top; float:right; padding-right:30px; padding-left:10px;">&gt;</span>
 			<span style="vertical-align:top; float:right">NEXT</span>
 		</div>
+		<span class="UI" id="timeDisplay">start &#8986;</span><br>
+		
+    <!--<div id="URLBox">
+		webentations.com/<input type="text" id="URLSlides" value="Enter code here" style="color:grey; border:0px" onclick="clearURLSlides()">
+	</div>-->
 		<!--<div class="UI botRow roundButton" id="speech">VOICE<br>CONTROL</div>-->
     </div>
     <!--<div class="UI botRow roundButton" id="speech">VOICE<br>CONTROL</div>
