--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -108,8 +108,7 @@
 			<input type="file" accept="pptx" id="uploadPresentation" style="display: none">		
         </div>
 	<% } %>
-		
-		
+	<%- randomSlides %>
 	<img src="./img/RightCurtain.png" id="rightCurtain" class="curtain" />
 	<img src="./img/RightCurtain.png" id="leftCurtain" class="curtain leftCurtain" />
  
@@ -216,6 +215,7 @@
 
     </section>
 
+
     <!-- Footer -->
     <footer id="footer">
         <ul class="icons">
@@ -238,19 +238,5 @@
             });
         });
     </script>
-	<script type="text/javascript">
-		try{
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-61563357-1']);
-			_gaq.push(['_setDomainName', window.location.hostname.substring(4)]);
-			_gaq.push(['_setAllowLinker', true]);
-			_gaq.push(['_trackPageview']);
-			(function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
-		}catch(e) {}
-	</script>
 </body>
 </html>
