--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/jquery-ui.min.css">
+    <link rel="stylesheet" href="js/elastislide/css/elastislide.css" />	
     <!--<link rel="stylesheet" href="css/bootstrap.css">-->
     <!--<link rel="stylesheet" href="css/base.css">-->
     <!--<link rel="stylesheet" href="css/skel.css" />-->
@@ -22,6 +23,8 @@
     <!--<link rel="stylesheet" href="css/mainPage.css">-->
 
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+    <script src="js/modernizr.js"></script>
+	<script src="js/elastislide/js/modernizr.custom.17475.js"></script>
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/jquery.scrolly.min.js"></script>
     <script src="js/jquery.dropotron.min.js"></script>
@@ -35,10 +38,12 @@
     <script src="js/client.js"></script>
     <script src="js/main.js"></script>
     <script src="js/jquery.scrollTo.js"></script>
+	<script src="js/elastislide/js/jquery.elastislide.js"></script>
+
 
     <!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css"/><![endif]-->
-    <script src="js/modernizr.js"></script>
+
 </head>
 
 <body class="landing">
