Several fixes for Slide password
1. Password checking moved to BE
2. Only presenter can set password for own presentations

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -183,7 +183,7 @@
 				  <li><a href="javascript:shareTwitter()" id="shareTwitter">Share on Twitter</a></li>
 				  <li><a href="javascript:downloadPresentation()" id="downloadPresentation">Download Presentation</a></li>
 				  <!--<li><a href="javascript:showHideInsertVideoSlideOverlay()" id="menuInsertVideoSlide">Insert Video Slide</a></li>-->
-				  <li><a href="javascript:showHidePasswordCreateOverlay()" id="menuPassword">Protect With Password</a></li>
+				  <li><a href="javascript:showHidePasswordCreateOverlay()" id="menuPassword" style="display: none">Protect With Password</a></li>
 				  <li><a href="../my.html" id="shareTwitter">My Presentations</a></li>
 				  <li><a href="/">Home</a></li>
 				  <li><a href="javascript:openContactUs()" id="menuContactUs">Contact Us / Suggest / Ask</a></li>
