Slite is replaced with domain name in description

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -2,14 +2,15 @@
 <html lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title><% if (user) { %> <%= user.username %> <%} %> online presentations</title>
-    <meta name="title" content="SLITE - online presentations" />
-    <meta name="description" content="Live online powerpoint slides presentation for web" />
-    <meta content="http://slite.us" property="og:url" />
-    <meta content="http://slite.us/img/logo.png" property="og:image" />
+    <title><% if (user) { %> <%= user.username %> <%} %> WEB PRESENTATIONS (live)</title>
+    <meta name="title" content="Live online presentations" />
+    <meta name="description" content="Free online web presentations. Social chat, video presentation, personal presentation notes, password protection and much more." />
+    <meta name="keywords" content="web presentations, web presentation, presentation, powerpoint, free, free online presentation, free presentation, slide, slides, free slides, powerpoint replacement">
+	<meta content="http://www.webentations.com" property="og:url" />
+    <meta content="http://www.webentations.com/img/logo.png" property="og:image" />
     <link rel="shortcut icon" id="favicon" href="img/favicon.png">
-    <meta name="author" content="SLITE inc.">
-    <link rel="canonical" href="http://slite.us" />
+    <meta name="author" content="WEBENTATIONS inc.">
+    <link rel="canonical" href="http://www.webentations.com" />
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -134,10 +135,10 @@
             <img src="img/Background_BusinessMeeting.jpg" alt="" />
         </span>
         <div class="content">
-            <header>
+            <header id="aboutOurProduct">
                 <h3>About Our Product</h3>
-                <p>Slite is a new way of showcasing what was called the&ldquo;PowerPoint Presentation&rdquo; of the 20th century.</p>
-                <p>Slite is a combination of PowerPoint, Skype, and Facebook. While you are showing your presentation, you are able to text chat, video chat, poll your audience live, and have a cool iPhone/Android application to control your presentation. Moreover, your presentations will now be live on the web, so you will never forget them or lose them. And the coolest thing? There is no installation or registration required! Use it for free!</p>
+                <p>Slite&#8482; is a new way of showcasing what was called the&ldquo;PowerPoint Presentation&rdquo; of the 20th century.</p>
+                <p>Slite&#8482; is a combination of PowerPoint, Skype, and Facebook. While you are showing your presentation, you are able to text chat, video chat, poll your audience live, and have a cool iPhone/Android application to control your presentation. Moreover, your presentations will now be live on the web, so you will never forget them or lose them. And the coolest thing? There is no installation or registration required! Use it for free!</p>
             </header>
         </div>
         <a href="#two" class="goto-next scrolly">Next</a>
@@ -232,7 +233,7 @@
             <li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
         </ul>
         <ul class="copyright">
-            <li>&copy; Slite. All rights reserved.</li>
+            <li>&copy; Slite&#8482;. All rights reserved.</li>
         </ul>
     </footer>
     <script type="text/javascript">
